Hide recipes for cleaning leather with venom from the book
Misleading on the leather pages